# ykst-bots

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.sample.yaml
bots/: .gitignore  Cargo.toml  config.sample.yaml
src/: bot.rs  main.rs
ykst_bot/: build.rs
ykst_bot/src/: lib.rs
ykst_client/: Cargo.toml  build.rs
ykst_client/src/: lib.rs
