[package]
name = "bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
config = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ykst_bot = {path = "../ykst_bot" }