[package]
name = "bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
config = "0.13"
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ykst_client = {path = "../ykst_client" }
cl-wordle = "0.4"
rand = "0.8"